force-app/main/default/objects/Order/fields/InvoiceGenerationError__c.field-meta.xml
<CustomField>
    <fullName>InvoiceGenerationError__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Generation Error</label>
    <referenceTo>brf_BatchApexError__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>