force-app/main/default/objects/Order/fields/InvoiceGenerationErrorType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceGenerationErrorType__c</fullName>
    <formula>InvoiceGenerationError__r.ExceptionType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Generation Error Type</label>
    <type>Text</type>
</CustomField>