force-app/main/default/objects/Order/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDER.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>