force-app/main/default/objects/Order/listViews/Bad_Orders.listView-meta.xml
<ListView>
    <fullName>Bad_Orders</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDER.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>InvoiceGenerationErrorType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.NAME</field>
        <operation>equals</operation>
        <value>Ref:100</value>
    </filters>
    <filters>
        <field>ORDER.NAME</field>
        <operation>equals</operation>
        <value>Ref:300</value>
    </filters>
    <filters>
        <field>ORDER.NAME</field>
        <operation>equals</operation>
        <value>Ref:500</value>
    </filters>
    <label>Bad Orders</label>
</ListView>